<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_currency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans_regular"
                android:text="@string/transaction_creation_type_label"
                android:textColor="#FFF" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/type_minus_radio"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/transaction_creation_type_minus"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <RadioButton
                    android:id="@+id/type_plus_radio"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/transaction_creation_type_plus"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/transaction_creation_value_hint"
                android:textColorHint="#FFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/value_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesans_regular"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textColor="#FFF"
                    android:theme="@style/EditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/transaction_creation_description_hint"
                android:textColorHint="#FFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesans_regular"
                    android:inputType="textCapSentences"
                    android:maxLength="256"
                    android:textColor="#FFF"
                    android:theme="@style/EditText" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/save" />

</LinearLayout>